@@ -32,7 +32,7 @@ EXAMPLE1
      print "Count of Czech CPAN authors: $count\n";
 
      # Output:
-     # Count of Czech CPAN authors: 31
+     # Count of Czech CPAN authors: 32
 
 EXAMPLE2
      # Pragmas.
@@ -83,8 +83,9 @@ EXAMPLE2
      #     [26] "TKR",
      #     [27] "TRIPIE",
      #     [28] "VASEKD",
-     #     [29] "ZEMAN",
-     #     [30] "ZOUL"
+     #     [29] "YENYA",
+     #     [30] "ZEMAN",
+     #     [31] "ZOUL"
      # ]
 
 DEPENDENCIES
